# llama-assistant

./: .gitignore  .pre-commit-config.yaml  LICENSE  LlamaAssistant.desktop  LlamaAssistant.spec  README.md  build.sh  chat_1b.py  main.py  pyproject.toml  requirements.txt  settings.json  setup.cfg
.github/workflows/: publish-to-pypi.yml
llama_assistant/: _version.py  config.py  custom_plaintext_editor.py  global_hotkey.py  icons.py  llama_assistant.py  llama_assistant_app.py  loading_animation.py  main.py  model_handler.py  processing_thread.py  setting_dialog.py  shortcut_recorder.py  speech_recognition.py  speech_recognition_thread.py  speech_recognition_whisper_experimental.py  tray_manager.py  ui_manager.py  utils.py  wake_word_detector.py
llama_assistant/resources/: icon.icns  wk_hey_llama.onnx
