[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "llama-assistant"
version = "0.1.28"
authors = [
    {name = "Viet-Anh Nguyen", email = "vietanh.dev@gmail.com"},
]
description = "An AI assistant powered by Llama models"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["AI", "assistant", "Llama", "PyQt6"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "PyQt6",
    "markdown",
    "llama-cpp-python",
    "pynput",
    "SpeechRecognition",
    "huggingface_hub",
    "openwakeword",
]
dynamic = []

[project.urls]
Homepage = "https://github.com/vietanhdev/llama-assistant"
"Bug Tracker" = "https://github.com/vietanhdev/llama-assistant/issues"

[project.scripts]
llama-assistant = "llama_assistant.main:main"

[tool.setuptools_scm]
write_to = "llama_assistant/_version.py"

[tool.setuptools.packages.find]
where = ["."]
include = ["llama_assistant*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"llama_assistant.resources" = ["*.png", "*.onnx"]


[tool.black]
line-length = 100
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pylint.master]
ignore-patterns = ["test_.*?py"]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0116",  # missing-function-docstring
    "C0103",  # invalid-name
    "W0611",  # unused-import
    "W0612",  # unused-variable
    "W0613",  # unused-argument
    "W0621",  # redefined-outer-name
    "W0622",  # redefined-builtin
    "W0703",  # broad-except
    "R0801",  # duplicate-code
    "R0902",  # too-many-instance-attributes
    "R0903",  # too-few-public-methods
    "R0904",  # too-many-public-methods
    "R0913",  # too-many-arguments
]
