[metadata]
name = llama-assistant
author = Viet-Anh Nguyen
author_email = vietanh.dev@gmail.com
description = An AI assistant powered by Llama models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vietanhdev/llama-assistant
project_urls =
    Bug Tracker = https://github.com/vietanhdev/llama-assistant/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8

[options.packages.find]
where = .

[options.package_data]
llama_assistant.resources = *.png